--- a/styles.css
+++ b/styles.css
@@ -96,8 +96,8 @@ h1 {
 }
 
 .ringImg {
-    width: 25%;
-    height: auto;
+    width: 10em;
+    height: 10em;
 }
 
 .productImg {
@@ -105,7 +105,16 @@ h1 {
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
     place-items: center;
-    padding: 15rem auto;
+    padding: 5px 5px;;
+}
+
+.productBox {
+    display: flex;
+    justify-content: center;
+    padding: 2px;
+    background-color: #006271;
+    margin: 10px 0 10px 0;
+    border: 2px;
 }
 
 @media only screen and (min-width: 480px) and (max-width: 1030px) {
@@ -115,12 +124,13 @@ h1 {
     }
 
     .productImg {
-        grid-template-columns: 20em 20em;
-        grid-template-rows: 20em 20em;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        
     }
 
     .ringImg {
-        width: 50%
+        width: 100%
     }
 }
 
@@ -175,7 +185,7 @@ h1 {
     }
 
     .ringImg {
-        width: 80%;
+        width: 100%;
         height: 100%
     }
 }
