--- a/stylesHome.css
+++ b/stylesHome.css
@@ -96,7 +96,7 @@ h1 {
     text-align: center;
 }
 
-.ringImg {
+.productImg {
     width: 10em;
     height: 10em;
 }
@@ -140,8 +140,10 @@ h1 {
         
     }
 
-    .ringImg {
-        width: 100%
+    .productImg {
+        width: 100%;
+        height: 100%;
+        
     }
 
     .productBox { 
@@ -149,6 +151,8 @@ h1 {
         background-color: #006271;
         margin: 25px 0 25px 0;
         border: 2px;
+        width: 210px;
+        height: 210px;
     }
 
 }    
@@ -205,7 +209,7 @@ h1 {
         grid-template-rows: 20em;
     }
 
-    .ringImg {
+    .productImg {
         max-width: 100%;
         max-height: 130px;
         min-height: 130px;
