--- a/stylesJewelry.css
+++ b/stylesJewelry.css
@@ -127,6 +127,14 @@ h1 {
     text-align: center;
 }
 
+footer {
+    background-color: #006271;
+    color: #ffffff;
+    text-align: center;
+    padding: 10px;
+    font-size: larger;
+}
+
 /* media query for tablet */
 
 @media only screen and (min-width: 480px) and (max-width: 1030px) {
